Fixed the image overflow error for the mobile

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,8 @@ span{
     }
 
     .img{
-        width: 50%;
+        width: 100%;
+        height: 100%;
     }
 
     .desktop{
@@ -140,7 +141,8 @@ span{
     }
 
      .mobile{
-        display: unset;
-        object-fit: cover;
+        display: block;
+        width: 100%;
+        height: 100%;
     }
-} 
+}       
